name:
  record
version:
  0.4.0.0
synopsis:
  Anonymous records
description:
  This library provides the abstractions behind the anonymous record syntax.
  It is intended to be used in conjunction with
  <http://hackage.haskell.org/package/record-preprocessor the "record-preprocessor">,
  which provides a native syntactic support.
  .
  Links:
  .
  * <http://nikita-volkov.github.io/record An extensive introduction to the library>.
category:
  Control, Data Structures, Records
homepage:
  https://github.com/nikita-volkov/record 
bug-reports:
  https://github.com/nikita-volkov/record/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2015, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Custom
cabal-version:
  >=1.10
extra-source-files:
  CHANGELOG.md


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/record.git


flag doctest
  description: Build Doctests
  default: True
  manual: True


library
  hs-source-dirs:
    library
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFunctor, DeriveGeneric, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, ImpredicativeTypes, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  other-modules:
    Record.TH
  exposed-modules:
    Record
  build-depends:
    -- 
    template-haskell == 2.*,
    -- 
    basic-lens == 0.0.*,
    base-prelude >= 0.1 && < 0.2,
    base >= 4.6 && < 4.9


test-suite doctest
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    doctest
  main-is:
    Main.hs
  ghc-options:
    -threaded
    "-with-rtsopts=-N"
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFunctor, DeriveGeneric, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, ImpredicativeTypes, LambdaCase, LiberalTypeSynonyms, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators
  default-language:
    Haskell2010
  if !flag(doctest)
    buildable: False
  build-depends:
    doctest == 0.9.*,
    directory == 1.2.*,
    filepath >= 1.3 && < 1.5,
    base-prelude,
    base
