name:
  record
version:
  0.3.2
synopsis:
  First class records implemented with quasi-quotation
description:
  An API of just two quasi-quoters, 
  providing a full-scale solution to the notorious records problem of Haskell.
  .
  Links:
  .
  * <http://nikita-volkov.github.io/record A comprehensive introduction to the library>.
  .
  * <https://github.com/nikita-volkov/record/blob/master/demo/Main.hs Demo>.
  .
category:
  Control, Data Structures
homepage:
  https://github.com/nikita-volkov/record 
bug-reports:
  https://github.com/nikita-volkov/record/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2015, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Custom
cabal-version:
  >=1.10
extra-source-files:
  CHANGELOG.md


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/record.git


flag doctest
  description: Build Doctests
  default: True
  manual: True


library
  hs-source-dirs:
    library
  ghc-options:
    -funbox-strict-fields
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  other-modules:
    Record.Parser
  exposed-modules:
    Record.Types
    Record.Lens
    Record
  build-depends:
    -- 
    attoparsec >= 0.12 && < 0.14,
    -- 
    text >= 1 && < 2,
    --
    template-haskell >= 2.8 && < 3,
    template-haskell-compat-v0208 == 0.1.*,
    -- 
    transformers >= 0.2 && < 0.6,
    base-prelude >= 0.1 && < 2,
    base >= 4.6 && < 5


test-suite doctest
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    doctest
  main-is:
    Main.hs
  ghc-options:
    -threaded
    "-with-rtsopts=-N"
    -funbox-strict-fields
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  if !flag(doctest)
    buildable: False
  build-depends:
    doctest == 0.11.*,
    directory == 1.2.*,
    filepath >= 1.3 && < 1.5,
    base-prelude,
    base


-- Well, it's not a benchmark actually, 
-- but in Cabal there's no cleaner way to specify an executable, 
-- which is not intended for distribution.
benchmark demo
  type: 
    exitcode-stdio-1.0
  hs-source-dirs:
    demo
  main-is:
    Main.hs
  ghc-options:
    -O2
    -threaded
    "-with-rtsopts=-N"
    -funbox-strict-fields
  default-language:
    Haskell2010
  build-depends:
    record,
    base-prelude
