name:
  record
version:
  0.4.2
synopsis:
  Anonymous records
description:
  This library provides the abstractions behind the anonymous record syntax.
  It is intended to be used in conjunction with
  <http://hackage.haskell.org/package/record-preprocessor the "record-preprocessor">,
  which enables a Haskell syntax extension.
  .
  If you're looking for the Template Haskell version of the library,
  please check out the @0.3.*@ versions.
  Those are maintained as well.
category:
  Control, Data Structures, Records
homepage:
  https://github.com/nikita-volkov/record 
bug-reports:
  https://github.com/nikita-volkov/record/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2015, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10
extra-source-files:
  CHANGELOG.md


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/record.git


library
  hs-source-dirs:
    library
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  other-modules:
    Record.TH
  exposed-modules:
    Record
  build-depends:
    -- 
    template-haskell >= 2.8 && < 2.12,
    -- 
    transformers >= 0.2 && < 0.6,
    basic-lens == 0.0.*,
    base-prelude >= 0.1 && < 2,
    base >= 4.6 && < 5
